swagger update reviews routes
